<resources>
    <string name="app_name">CricDeCode</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="fb_app_id">682146731813576</string>
    <string name="azure_sendgcm">http://acjs.azurewebsites.net/acjs/CDCgcm_vGAE.php</string>
    <string name="azure_subscription_chk">http://acjs.azurewebsites.net/acjs/CDCSubscriptionPurchaseChk_vGAE.php</string>
    <string name="azure_inapppurchase">http://acjs.azurewebsites.net/acjs/CDCInAppPurchase_vGAE.php</string>
    <string name="azure_subscription">http://acjs.azurewebsites.net/acjs/CDCSubscriptionPurchase_vGAE.php</string>
    <string name="gae_ads_insert">http://acjs-cdc-ads.appspot.com/insert</string>
    <string name="gae_ads_retrieve">http://acjs-cdc-ads.appspot.com/retrieve</string>
    <string name="gae_andro_insert">http://acjs-cdc-andro.appspot.com/insert</string>
    <string name="gae_andro_retrieve">http://acjs-cdc-andro.appspot.com/retrieve</string>
    <string name="gae_infi_insert">http://acjs-cdc-infi.appspot.com/insert</string>
    <string name="gae_infi_retrieve">http://acjs-cdc-infi.appspot.com/retrieve</string>
    <string name="gae_infi_check">http://acjs-cdc-infi.appspot.com/check</string>
    <string name="gae_infisync_insert">http://acjs-cdc-infisync.appspot.com/insert</string>
    <string name="gae_infisync_retrieve">http://acjs-cdc-infisync.appspot.com/retrieve</string>
    <string name="gae_infisync_check">http://acjs-cdc-infisync.appspot.com/check</string>
    <string name="gae_match_insert">http://acjs-cdc-match.appspot.com/insert</string>
    <string name="gae_match_fetch">http://acjs-cdc-match.appspot.com/fetch</string>
    <string name="gae_match_delete">http://acjs-cdc-match.appspot.com/delete</string>
    <string name="gae_per_insert">http://acjs-cdc-per.appspot.com/insert</string>
    <string name="gae_per_fetch">http://acjs-cdc-per.appspot.com/fetch</string>
    <string name="gae_sync_insert">http://acjs-cdc-sync.appspot.com/insert</string>
    <string name="gae_sync_retrieve">http://acjs-cdc-sync.appspot.com/retrieve</string>
    <string name="gae_sync_check">http://acjs-cdc-sync.appspot.com/check</string>
    <string name="gae_user_insert">http://acjs-cdc-user.appspot.com/insert</string>
    <string name="gae_user_update">http://acjs-cdc-user.appspot.com/update</string>
    <string name="gae_send_gcm">http://acjs-cdc-gcm.appspot.com/sendgcm</string>
    <string name="ping_acjs_gcm">http://cdc.acjs.co/gcmfiles/cdcGCM.php</string>
    <string name="ping_hansa_gcm">http://hansaacademy.org/cdc/cdcGCM.php</string>
    <string name="projno">899334271790</string>
    <string name="profile">Profile</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="career">Career</string>
    <string name="analysis">Analysis</string>
    <string name="create_new_match">Create New Match</string>
    <string name="match_diary">History</string>
    <string name="ongoing_matches">Matches</string>
    <string name="buy_schemes">Buy Schemes</string>
    <string name="graph">Graph</string>
    <string name="publisher_id">a151c9c34615465</string>
    <string name="general">GENERAL</string>
    <string name="batting">BAT</string>
    <string name="bowling">BALL</string>
    <string name="fielding">FIELD</string>
    <string-array name="drawer_list_item">
        <item>Profile</item>
        <item>Career</item>
        <item>Analysis</item>
        <item>History</item>
        <item>Matches</item>
        <item>Schemes</item>
        <item>Support</item>
    </string-array>
    <string-array name="support_list_item">
        <item>Terms of Service</item>
        <item>Privacy Policy</item>
        <item>Support</item>
        <item>Share this App</item>
        <item>Version</item>
        <item>Feedback</item>
        <item>Rate Us</item>
    </string-array>
    <string name="support">Support</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_picture_size_view">250</string>
    <string name="profile_picture_size_edit">100</string>
    <string name="name">Name</string>
    <string name="nickname">Nickname</string>
    <string name="date_of_birth">Date of Birth</string>
    <string-array name="role">
        <item>Batsman</item>
        <item>Bowler</item>
        <item>All-Rounder</item>
        <item>Wicket Keeper</item>
    </string-array>
    <string-array name="batting_style">
        <item>Right Hand Bat</item>
        <item>Left Hand Bat</item>
    </string-array>
    <string-array name="bowling_style">
        <item>Right-arm fast</item>
        <item>Right-arm fast medium</item>
        <item>Right-arm medium fast</item>
        <item>Right-arm medium</item>
        <item>Left-arm fast</item>
        <item>Left-arm fast medium</item>
        <item>Left-arm medium fast</item>
        <item>Left-arm medium</item>
        <item>Off break (right-arm)</item>
        <item>Leg break (right-arm)</item>
        <item>Slow left-arm orthodox</item>
        <item>Slow left-arm chinaman</item>
    </string-array>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="save_profile">Save Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_match_add">No Matches Added to History!</string>
    <string name="fb_tip_ll_click">Click</string>
    <string name="fb_tip_ll_to_share">to Share your Success</string>
    <string name="fb_tip_ll_fff">with Friends, Family and Fans!</string>
    <string name="txt_ok_got_it">OK. Got it!</string>
    <string name="synced">Synced</string>
    <string name="txt_add_to_hist">to Add to <b>History</b></string>
    <string name="txt1_add_to_hist">to make match available for analysis.</string>
    <string name="in_matches">in <b>Matches</b></string>
    <string name="to_add_to_hist">to Add Match to History</string>
    <string name="no_matches_create">No Ongoing Matches!</string>
    <string name="click_on">Click on</string>
    <string name="to_create">to Create a New Match</string>
    <string name="match_date">Match Date</string>
    <string name="season">Season</string>
    <string name="date_format">MMMM dd, yyyy</string>
    <string name="my_team">My Team</string>
    <string name="opponent_team">Opponent</string>
    <string name="venue">Venue</string>
    <string-array name="overs">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>70</item>
        <item>90</item>
    </string-array>
    <string-array name="innings">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="result">Match Result</string>
    <string name="new_match">New Match</string>
    <string name="create_match">Create Match</string>
    <string name="vs">vs</string>
    <string name="at">At</string>
    <string name="add_to_career">Add</string>
    <string name="delete">Del</string>
    <string-array name="match_result">
        <item>Win</item>
        <item>Loss</item>
        <item>Draw</item>
        <item>Tie</item>
        <item>Abandoned</item>
    </string-array>
    <string name="match_review">Match Review</string>
    <string-array name="level">
        <item>International</item>
        <item>Zonal</item>
        <item>State</item>
        <item>Junior International</item>
        <item>Junior Zonal</item>
        <item>Junior State</item>
        <item>Junior Local</item>
        <item>Corporate</item>
        <item>Club</item>
        <item>University</item>
        <item>College</item>
        <item>School</item>
        <item>Practice</item>
        <item>Other Private</item>
    </string-array>
    <string name="duration">Duration</string>
    <string-array name="first">
        <item>Batting</item>
        <item>Fielding</item>
    </string-array>
    <string name="post_to_fb">Post To Facebook</string>
    <string-array name="over_limit">
        <item>Limited Overs</item>
        <item>Unlimited Overs</item>
    </string-array>
    <string-array name="match_duration">
        <item>Day</item>
        <item>Night</item>
        <item>Day and Night</item>
    </string-array>
    <string name="dnb">Did Not Bat</string>
    <string name="batted">Batted? </string>
    <string name="bowled">Bowled? </string>
    <string name="batting_no">Batting Number</string>
    <string name="runs">Runs</string>
    <string name="balls">Balls</string>
    <string name="time_spent">Time Spent</string>
    <string name="fours">Fours</string>
    <string name="sixes">Sixes</string>
    <string-array name="how_out">
        <item>Not Out</item>
        <item>Retired</item>
        <item>Bowled</item>
        <item>Timed Out</item>
        <item>Caught</item>
        <item>Handled the Ball</item>
        <item>Hit the Ball Twiice</item>
        <item>Hit Wicket</item>
        <item>LBW</item>
        <item>Obstructing the Field</item>
        <item>Run Out</item>
        <item>Stumped</item>
    </string-array>
    <string name="bowler_type">Bowler Type</string>
    <string-array name="fielding_pos">
        <item>Wicket Keeper</item>
        <item>1st Slip</item>
        <item>2nd Slip</item>
        <item>3rd Slip</item>
        <item>4th Slip</item>
        <item>Leg Slip</item>
        <item>Fly Slip</item>
        <item>Gully</item>
        <item>Silly Point</item>
        <item>Silly Mid Off</item>
        <item>Short Mid Off</item>
        <item>Short Leg</item>
        <item>Silly Mid On</item>
        <item>Third Man</item>
        <item>Backward Point</item>
        <item>Point</item>
        <item>Cover Point</item>
        <item>Cover</item>
        <item>Sweeper</item>
        <item>Extra Cover</item>
        <item>Deep Cover</item>
        <item>Deep Extra Cover</item>
        <item>Mid Off</item>
        <item>Long Off</item>
        <item>Bowler</item>
        <item>Mid On</item>
        <item>Long On</item>
        <item>Cow Corner</item>
        <item>Mid Wicket</item>
        <item>Deep Mid Wicket</item>
        <item>Square Leg</item>
        <item>Deep Square Leg</item>
        <item>Short Backward Square Leg</item>
        <item>Deep Backward Square Leg</item>
        <item>Short Fine Leg</item>
        <item>Long Leg</item>
        <item>Fine Leg</item>
        <item>Long Stop</item>
    </string-array>
    <string name="lives">Lives</string>
    <string name="dnbowl">Did Not Bowl</string>
    <string name="spells">Spells</string>
    <string name="maidens">Maidens</string>
    <string name="wickets_left">Wickets</string>
    <string name="wickets_right">Wickets</string>
    <string name="catches_dropped_bowling">Dropped</string>
    <string name="noballs">No Balls</string>
    <string name="wides">Wides</string>
    <string name="wkt_tot">Total</string>
    <string name="lhb">Left Hand Bat</string>
    <string name="rhb">Right Hand Bat</string>
    <string name="in_slip">In Slip</string>
    <string name="close">Close</string>
    <string name="on_circle">On Circle</string>
    <string name="in_deep">In Deep</string>
    <string name="in_circle">In Circle</string>
    <string name="deep_runouts">Run Outs in Deep</string>
    <string name="close_catches">Close Catches</string>
    <string name="circle_catches">Catches on Circle</string>
    <string name="deep_catches">Catches in Deep</string>
    <string name="circle_runouts">Run Outs in Circle</string>
    <string name="stumpings">Stumpings</string>
    <string name="average">Average</string>
    <string name="wickets">Wickets</string>
</resources>